# Spring2026-CompanyA

./: .clang-format  .gitattributes  .gitignore  BUILD.md  CMake.md  CMakeLists.txt  Makefile  README.md  cse498clang_format (4)  package.json  test_feature_vector  test_log.csv  test_worldpath
.github/: copilot-instructions.md
CSE 498 Project/: CMakeLists.txt  character.h  main.cpp
demo/: Group15_demo  Group15_demo.cpp  Group17_demo.cpp
demos/AIAgents/: Group01_main.cpp
demos/ClassicAgents/: Group02_main.cpp
demos/DataAnalytics/: Group16_main.cpp
demos/GUI/: Group17_demo.cpp  Group17_main.cpp
demos/GenerativeWorld/: Group15_main.cpp
demos/InteractiveWorld/: Group14_main.cpp
demos/WebUI/: Group18_main.cpp  index.html
docs/: Group1.md  group14.md
docs/ClassSpecs/GenerativeWorld/: GenerativeWorldClassesWriteup.md  Group 15 Module - Generative World.md
group_specific_content/Group-02/: APIDOCUMENT.md  AgentAbility.cpp  PathGenerator.cpp  PathGenerator.h  PathVector.cpp  PathVector.h  TestWorldPath.cpp  WorldPath.cpp  WorldPath.h
group_specific_content/Group-02/ActionMap/: ActionMap.cpp
group_specific_content/Group-02/BehaviorTree/: BehaviorTree.cpp  BehaviorTree.h  TestBehaviorTree.cpp
group_specific_content/Group-02/VideoOverview/: ActionMapScript.docx  BehaviorTreeScript.docx  MemoFunctionScript.docx  WorldPathScript.docx  video link.docx  video link.md
group_specific_content/Group-14/: Group 14 Specifications  Group14Specs.md
group_specific_content/Group-14/Group14InitialClasses/: DataMap.hpp  EventQueue.hpp  ExpressionParser.hpp  FunctionSet.hpp
group_specific_content/Group-14/Group14TestCases/: EventQueue.cpp  Scheduler.cpp
group_specific_content/Group-15/: BSP-Dungeon.hpp  DataFileManager.cpp  DataFileManager.hpp  Group 15 Module - Generative World.md  Random.cpp  Random.hpp  RoomHolder.hpp  WeightedSet.cpp  WeightedSet.hpp  WorldGeneration.hpp  WorldGrid.cpp  WorldGrid.hpp  WorldPosition.cpp  WorldPosition.hpp  character.cpp  dungeonData.cpp  dungeonData.h  item.cpp  item.h  main  main.cpp
group_specific_content/Group-16/: DataLog.hpp  OutputManager.cpp  OutputManager.hpp  Timer.cpp  Timer.hpp
source/: GameView_Main.cpp  Group02_main.cpp  Group17_Main.cpp  Group17_main.cpp  Group18_main.cpp  Group1_main.cpp  Makefile  group1  group17_demo  image_manager_test  index.html  simple  simple_main.cpp
source/Agents/: AgentDefinition.hpp  AgentFactory.cpp  AgentFactory.h  AgentFactory.hpp  AgentLevels.hpp  Enemy.cpp  Enemy.h  Enemy.hpp  EnemyAgent.cpp  EnemyAgent.hpp  EnemyFollowPlayerTree.cpp  EnemyFollowPlayerTree.hpp  FarmingAgent.cpp  FarmingAgent.h  FarmingAgent.hpp  LearningExplorerAgent.cpp  LearningExplorerAgent.hpp  MerchantAgent.cpp  MerchantAgent.hpp  MovementTypes.cpp  MovementTypes.hpp  PacingAgent.hpp  PlayerAgent.cpp  PlayerAgent.h  PlayerAgent.hpp  SmartEnemyAgent.cpp  SmartEnemyAgent.hpp  TrailblazerAgent.cpp  TrailblazerAgent.hpp
source/Agents/AI/: EnemyAgent.cpp  (+8 more)
source/Analyze/: AnalyticsManager.cpp  AnalyticsManager.hpp  HeatMap.cpp  HeatMap.hpp  ReplayDriver.cpp  ReplayDriver.hpp  StatsTracker.cpp  StatsTracker.hpp
source/DataAnalytics/: AnalyticsManager.cpp  AnalyticsManager.hpp  Group16_main.cpp  HeatMap.cpp  HeatMap.hpp  ReplayDriver.cpp  ReplayDriver.hpp  StatsTracker.cpp  StatsTracker.hpp  group16moduletest.cpp
source/Interfaces/: AIDebugInterface.cpp  AIDebugInterface.hpp  TrashInterface.hpp
source/Worlds/: AIWorld.cpp  AIWorld.hpp  DemoSimpleWorldG2.cpp  DemoSimpleWorldG2.hpp  DemoSimpleWorldG2Actions.hpp  DungeonOne.hpp  InteractiveWorld.hpp  MazeWorld.hpp
source/core/: AgentBase.hpp  BSP-Dungeon.hpp  Building.hpp  DungeonBase.hpp  DungeonWorld.hpp  Entity.hpp  Game.cpp  Game.hpp  InterfaceBase.hpp  ItemBase.hpp  Location.hpp  OutputManager.cpp  OutputManager.hpp  OverWorld.hpp  RoomHolder.hpp  WorldBase.hpp  WorldGeneration.hpp  WorldGrid.hpp  WorldPosition.hpp
source/tools/: ActionLog.cpp  ActionLog.hpp  ActionMap.cpp  ActionMap.hpp  AgentAbility.cpp  AgentAbility.hpp  AnalyticsManager.cpp  AnalyticsManager.hpp  AnnotationSet.cpp  AnnotationSet.hpp  BehaviorTree.cpp  BehaviorTree.hpp  Color.hpp  CombatStats.hpp  DamageCalculator.cpp  DamageCalculator.hpp  DataFileManager.hpp  DataLog.cpp  DataLog.hpp  ExpressionParser.hpp  FeatureVector.cpp  FeatureVector.h  FeatureVector.hpp  FunctionSet.hpp  MemoFunction.h  MemoFunction.hpp  MemoryFactory.hpp  OutputManager.cpp  OutputManager.hpp  PathGenerator.cpp  PathGenerator.hpp  PathVector.cpp  PathVector.hpp  Random.hpp  ReplayDriver.cpp  ReplayDriver.h  ReplayDriver.hpp  RobinHoodMap.cpp  RobinHoodMap.hpp  StatsTracker.cpp  (+16 more)
tests/: DataFileManagerTest.csv  Makefile  replay_agent2.csv  replay_all.csv  replay_move.csv  replay_timerange.csv  test_OutputManager.cpp  test_log.csv  tmp_agent1.csv  tmp_attack.csv  webui_testrunner.js
tests/Agents/: MovementTypesTest.cpp  TestAIWorld.cpp  TestClassicAgentsGeneral.cpp  TestEnemyAgent.cpp  TestFarmingAgent.cpp  TestFetchAgent.cpp  TestGoblin.cpp  TestInventory.cpp  TestLearningExplorerAgent.cpp  TestPacingAgent.cpp  TestPlayer.cpp  TestPlayerInteractions.cpp  TestResourceManagementAgent.cpp  TestSkeleton.cpp  TestSmartEnemyAgent.cpp  TestTrading.cpp  TestTrailblazerAgent.cpp
tests/DataAnalytics/: AnalyticsManagerTest.cpp
tests/InteractiveWorld/: Building.cpp  DataMap.cpp  EventQueue.cpp  ExpressionParser.cpp  FunctionSet.cpp  InteractiveWorldInventory.cpp  NPC.cpp  ResourceBank.cpp  ResourceProducer.cpp  Scheduler.cpp
tests/core/: ReplayDriverTests.cpp  WorldPosition.cpp  test_OutputManager.cpp
tests/tools/: ActionLogTest.cpp  AnalyticsManagerTest.cpp  AnnotationSet.cpp  ColorTest.cpp  DataFileManager.cpp  DataLogTest.cpp  HeatMapTests.cpp  MemoryFactory.cpp  OutputManagerTest.cpp  Random.cpp  ReplayDriverTests.cpp  RobinHoodMap.cpp  StatsTrackerTest.cpp  StopwatchTest.cpp  TagManagerTest.cpp  TestActionMap.cpp  TestBehaviorTree.cpp  TestMemoFunction.cpp  TestPathGenerator.cpp  TestPathVector.cpp  TestWorldPath.cpp  Test_FeatureVector.cpp  TimerTest.cpp  WeightedSet.cpp  WorldGrid.cpp  WorldPosition.cpp
(+251 files in other folders)
