cmake_minimum_required(VERSION 4.1)
project(Spring2026_CompanyA)

set(CMAKE_CXX_STANDARD 14)

include_directories(group_specific_content/Group-15)
include_directories(source/Agents)
include_directories(source/core)
include_directories(source/Interfaces)
include_directories(source/tools)
include_directories(source/Worlds)
include_directories(third-party/Catch/include)
include_directories(third-party/Catch/include/external)
include_directories(third-party/Catch/include/internal)
include_directories(third-party/Catch/include/internal/benchmark)
include_directories(third-party/Catch/include/internal/benchmark/detail)
include_directories(third-party/Catch/include/reporters)
include_directories(third-party/Catch/projects/XCode/OCTest/OCTest)
include_directories(third-party/Catch/single_include)
include_directories(third-party/Catch/single_include/catch2)
include_directories(third-party/Catch/third_party)

add_executable(Spring2026_CompanyA
        group_specific_content/Group-15/character.cpp
        group_specific_content/Group-15/character.h
        group_specific_content/Group-15/dungeonData.cpp
        group_specific_content/Group-15/dungeonData.h
        group_specific_content/Group-15/item.cpp
        group_specific_content/Group-15/item.h
        group_specific_content/Group-15/main.cpp
        group_specific_content/Group-15/Random.hpp
        source/Agents/PacingAgent.hpp
        source/core/AgentBase.hpp
        source/core/Entity.hpp
        source/core/InterfaceBase.hpp
        source/core/ItemBase.hpp
        source/core/Location.hpp
        source/core/WorldBase.hpp
        source/core/WorldGrid.hpp
        source/core/WorldPosition.hpp
        source/Interfaces/TrashInterface.hpp
        source/tools/io_utils.hpp
        source/Worlds/MazeWorld.hpp
        source/simple_main.cpp
        third-party/Catch/examples/000-CatchMain.cpp
        third-party/Catch/examples/010-TestCase.cpp
        third-party/Catch/examples/020-TestCase-1.cpp
        third-party/Catch/examples/020-TestCase-2.cpp
        third-party/Catch/examples/030-Asn-Require-Check.cpp
        third-party/Catch/examples/100-Fix-Section.cpp
        third-party/Catch/examples/110-Fix-ClassFixture.cpp
        third-party/Catch/examples/120-Bdd-ScenarioGivenWhenThen.cpp
        third-party/Catch/examples/200-Rpt-CatchMain.cpp
        third-party/Catch/examples/207-Rpt-TeamCityReporter.cpp
        third-party/Catch/examples/210-Evt-EventListeners.cpp
        third-party/Catch/examples/231-Cfg-OutputStreams.cpp
        third-party/Catch/examples/300-Gen-OwnGenerator.cpp
        third-party/Catch/examples/301-Gen-MapTypeConversion.cpp
        third-party/Catch/examples/302-Gen-Table.cpp
        third-party/Catch/examples/310-Gen-VariablesInGenerators.cpp
        third-party/Catch/examples/311-Gen-CustomCapture.cpp
        third-party/Catch/include/external/clara.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_analyse.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_benchmark_function.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_complete_invoke.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_estimate_clock.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_measure.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_repeat.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_run_for_at_least.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_stats.cpp
        third-party/Catch/include/internal/benchmark/detail/catch_stats.hpp
        third-party/Catch/include/internal/benchmark/detail/catch_timing.hpp
        third-party/Catch/include/internal/benchmark/catch_benchmark.hpp
        third-party/Catch/include/internal/benchmark/catch_benchmarking_all.hpp
        third-party/Catch/include/internal/benchmark/catch_chronometer.hpp
        third-party/Catch/include/internal/benchmark/catch_clock.hpp
        third-party/Catch/include/internal/benchmark/catch_constructor.hpp
        third-party/Catch/include/internal/benchmark/catch_environment.hpp
        third-party/Catch/include/internal/benchmark/catch_estimate.hpp
        third-party/Catch/include/internal/benchmark/catch_execution_plan.hpp
        third-party/Catch/include/internal/benchmark/catch_optimizer.hpp
        third-party/Catch/include/internal/benchmark/catch_outlier_classification.hpp
        third-party/Catch/include/internal/benchmark/catch_sample_analysis.hpp
        third-party/Catch/include/internal/catch_approx.cpp
        third-party/Catch/include/internal/catch_approx.h
        third-party/Catch/include/internal/catch_assertionhandler.cpp
        third-party/Catch/include/internal/catch_assertionhandler.h
        third-party/Catch/include/internal/catch_assertioninfo.h
        third-party/Catch/include/internal/catch_assertionresult.cpp
        third-party/Catch/include/internal/catch_assertionresult.h
        third-party/Catch/include/internal/catch_capture.hpp
        third-party/Catch/include/internal/catch_capture_matchers.cpp
        third-party/Catch/include/internal/catch_capture_matchers.h
        third-party/Catch/include/internal/catch_clara.h
        third-party/Catch/include/internal/catch_commandline.cpp
        third-party/Catch/include/internal/catch_commandline.h
        third-party/Catch/include/internal/catch_common.cpp
        third-party/Catch/include/internal/catch_common.h
        third-party/Catch/include/internal/catch_compiler_capabilities.h
        third-party/Catch/include/internal/catch_config.cpp
        third-party/Catch/include/internal/catch_config.hpp
        third-party/Catch/include/internal/catch_config_uncaught_exceptions.hpp
        third-party/Catch/include/internal/catch_console_colour.cpp
        third-party/Catch/include/internal/catch_console_colour.h
        third-party/Catch/include/internal/catch_context.cpp
        third-party/Catch/include/internal/catch_context.h
        third-party/Catch/include/internal/catch_debug_console.cpp
        third-party/Catch/include/internal/catch_debug_console.h
        third-party/Catch/include/internal/catch_debugger.cpp
        third-party/Catch/include/internal/catch_debugger.h
        third-party/Catch/include/internal/catch_decomposer.cpp
        third-party/Catch/include/internal/catch_decomposer.h
        third-party/Catch/include/internal/catch_default_main.hpp
        third-party/Catch/include/internal/catch_enforce.cpp
        third-party/Catch/include/internal/catch_enforce.h
        third-party/Catch/include/internal/catch_enum_values_registry.cpp
        third-party/Catch/include/internal/catch_enum_values_registry.h
        third-party/Catch/include/internal/catch_errno_guard.cpp
        third-party/Catch/include/internal/catch_errno_guard.h
        third-party/Catch/include/internal/catch_exception_translator_registry.cpp
        third-party/Catch/include/internal/catch_exception_translator_registry.h
        third-party/Catch/include/internal/catch_external_interfaces.h
        third-party/Catch/include/internal/catch_fatal_condition.cpp
        third-party/Catch/include/internal/catch_fatal_condition.h
        third-party/Catch/include/internal/catch_generators.cpp
        third-party/Catch/include/internal/catch_generators.hpp
        third-party/Catch/include/internal/catch_generators_generic.hpp
        third-party/Catch/include/internal/catch_generators_specific.hpp
        third-party/Catch/include/internal/catch_impl.hpp
        third-party/Catch/include/internal/catch_interfaces_capture.cpp
        third-party/Catch/include/internal/catch_interfaces_capture.h
        third-party/Catch/include/internal/catch_interfaces_config.cpp
        third-party/Catch/include/internal/catch_interfaces_config.h
        third-party/Catch/include/internal/catch_interfaces_enum_values_registry.h
        third-party/Catch/include/internal/catch_interfaces_exception.cpp
        third-party/Catch/include/internal/catch_interfaces_exception.h
        third-party/Catch/include/internal/catch_interfaces_generatortracker.h
        third-party/Catch/include/internal/catch_interfaces_registry_hub.cpp
        third-party/Catch/include/internal/catch_interfaces_registry_hub.h
        third-party/Catch/include/internal/catch_interfaces_reporter.cpp
        third-party/Catch/include/internal/catch_interfaces_reporter.h
        third-party/Catch/include/internal/catch_interfaces_runner.cpp
        third-party/Catch/include/internal/catch_interfaces_runner.h
        third-party/Catch/include/internal/catch_interfaces_tag_alias_registry.h
        third-party/Catch/include/internal/catch_interfaces_testcase.cpp
        third-party/Catch/include/internal/catch_interfaces_testcase.h
        third-party/Catch/include/internal/catch_leak_detector.cpp
        third-party/Catch/include/internal/catch_leak_detector.h
        third-party/Catch/include/internal/catch_list.cpp
        third-party/Catch/include/internal/catch_list.h
        third-party/Catch/include/internal/catch_matchers.cpp
        third-party/Catch/include/internal/catch_matchers.h
        third-party/Catch/include/internal/catch_matchers_exception.cpp
        third-party/Catch/include/internal/catch_matchers_exception.hpp
        third-party/Catch/include/internal/catch_matchers_floating.cpp
        third-party/Catch/include/internal/catch_matchers_floating.h
        third-party/Catch/include/internal/catch_matchers_generic.cpp
        third-party/Catch/include/internal/catch_matchers_generic.hpp
        third-party/Catch/include/internal/catch_matchers_string.cpp
        third-party/Catch/include/internal/catch_matchers_string.h
        third-party/Catch/include/internal/catch_matchers_vector.h
        third-party/Catch/include/internal/catch_message.cpp
        third-party/Catch/include/internal/catch_message.h
        third-party/Catch/include/internal/catch_meta.hpp
        third-party/Catch/include/internal/catch_objc.hpp
        third-party/Catch/include/internal/catch_objc_arc.hpp
        third-party/Catch/include/internal/catch_option.hpp
        third-party/Catch/include/internal/catch_output_redirect.cpp
        third-party/Catch/include/internal/catch_output_redirect.h
        third-party/Catch/include/internal/catch_platform.h
        third-party/Catch/include/internal/catch_polyfills.cpp
        third-party/Catch/include/internal/catch_polyfills.hpp
        third-party/Catch/include/internal/catch_preprocessor.hpp
        third-party/Catch/include/internal/catch_random_number_generator.cpp
        third-party/Catch/include/internal/catch_random_number_generator.h
        third-party/Catch/include/internal/catch_reenable_warnings.h
        third-party/Catch/include/internal/catch_registry_hub.cpp
        third-party/Catch/include/internal/catch_reporter_registrars.hpp
        third-party/Catch/include/internal/catch_reporter_registry.cpp
        third-party/Catch/include/internal/catch_reporter_registry.h
        third-party/Catch/include/internal/catch_result_type.cpp
        third-party/Catch/include/internal/catch_result_type.h
        third-party/Catch/include/internal/catch_run_context.cpp
        third-party/Catch/include/internal/catch_run_context.h
        third-party/Catch/include/internal/catch_section.cpp
        third-party/Catch/include/internal/catch_section.h
        third-party/Catch/include/internal/catch_section_info.cpp
        third-party/Catch/include/internal/catch_section_info.h
        third-party/Catch/include/internal/catch_session.cpp
        third-party/Catch/include/internal/catch_session.h
        third-party/Catch/include/internal/catch_singletons.cpp
        third-party/Catch/include/internal/catch_singletons.hpp
        third-party/Catch/include/internal/catch_startup_exception_registry.cpp
        third-party/Catch/include/internal/catch_startup_exception_registry.h
        third-party/Catch/include/internal/catch_stream.cpp
        third-party/Catch/include/internal/catch_stream.h
        third-party/Catch/include/internal/catch_string_manip.cpp
        third-party/Catch/include/internal/catch_string_manip.h
        third-party/Catch/include/internal/catch_stringref.cpp
        third-party/Catch/include/internal/catch_stringref.h
        third-party/Catch/include/internal/catch_suppress_warnings.h
        third-party/Catch/include/internal/catch_tag_alias.cpp
        third-party/Catch/include/internal/catch_tag_alias.h
        third-party/Catch/include/internal/catch_tag_alias_autoregistrar.cpp
        third-party/Catch/include/internal/catch_tag_alias_autoregistrar.h
        third-party/Catch/include/internal/catch_tag_alias_registry.cpp
        third-party/Catch/include/internal/catch_tag_alias_registry.h
        third-party/Catch/include/internal/catch_test_case_info.cpp
        third-party/Catch/include/internal/catch_test_case_info.h
        third-party/Catch/include/internal/catch_test_case_registry_impl.cpp
        third-party/Catch/include/internal/catch_test_case_registry_impl.h
        third-party/Catch/include/internal/catch_test_case_tracker.cpp
        third-party/Catch/include/internal/catch_test_case_tracker.h
        third-party/Catch/include/internal/catch_test_registry.cpp
        third-party/Catch/include/internal/catch_test_registry.h
        third-party/Catch/include/internal/catch_test_spec.cpp
        third-party/Catch/include/internal/catch_test_spec.h
        third-party/Catch/include/internal/catch_test_spec_parser.cpp
        third-party/Catch/include/internal/catch_test_spec_parser.h
        third-party/Catch/include/internal/catch_text.h
        third-party/Catch/include/internal/catch_timer.cpp
        third-party/Catch/include/internal/catch_timer.h
        third-party/Catch/include/internal/catch_to_string.hpp
        third-party/Catch/include/internal/catch_tostring.cpp
        third-party/Catch/include/internal/catch_tostring.h
        third-party/Catch/include/internal/catch_totals.cpp
        third-party/Catch/include/internal/catch_totals.h
        third-party/Catch/include/internal/catch_uncaught_exceptions.cpp
        third-party/Catch/include/internal/catch_uncaught_exceptions.h
        third-party/Catch/include/internal/catch_user_interfaces.h
        third-party/Catch/include/internal/catch_version.cpp
        third-party/Catch/include/internal/catch_version.h
        third-party/Catch/include/internal/catch_wildcard_pattern.cpp
        third-party/Catch/include/internal/catch_wildcard_pattern.h
        third-party/Catch/include/internal/catch_windows_h_proxy.h
        third-party/Catch/include/internal/catch_xmlwriter.cpp
        third-party/Catch/include/internal/catch_xmlwriter.h
        third-party/Catch/include/reporters/catch_reporter_automake.hpp
        third-party/Catch/include/reporters/catch_reporter_bases.cpp
        third-party/Catch/include/reporters/catch_reporter_bases.hpp
        third-party/Catch/include/reporters/catch_reporter_compact.cpp
        third-party/Catch/include/reporters/catch_reporter_compact.h
        third-party/Catch/include/reporters/catch_reporter_console.cpp
        third-party/Catch/include/reporters/catch_reporter_console.h
        third-party/Catch/include/reporters/catch_reporter_junit.cpp
        third-party/Catch/include/reporters/catch_reporter_junit.h
        third-party/Catch/include/reporters/catch_reporter_listening.cpp
        third-party/Catch/include/reporters/catch_reporter_listening.h
        third-party/Catch/include/reporters/catch_reporter_sonarqube.hpp
        third-party/Catch/include/reporters/catch_reporter_tap.hpp
        third-party/Catch/include/reporters/catch_reporter_teamcity.hpp
        third-party/Catch/include/reporters/catch_reporter_xml.cpp
        third-party/Catch/include/reporters/catch_reporter_xml.h
        third-party/Catch/include/catch.hpp
        third-party/Catch/include/catch_with_main.hpp
        third-party/Catch/misc/coverage-helper.cpp
        third-party/Catch/projects/ExtraTests/X01-PrefixedMacros.cpp
        third-party/Catch/projects/ExtraTests/X02-DisabledMacros.cpp
        third-party/Catch/projects/ExtraTests/X03-DisabledExceptions-DefaultHandler.cpp
        third-party/Catch/projects/ExtraTests/X04-DisabledExceptions-CustomHandler.cpp
        third-party/Catch/projects/ExtraTests/X10-FallbackStringifier.cpp
        third-party/Catch/projects/ExtraTests/X11-DisableStringification.cpp
        third-party/Catch/projects/ExtraTests/X12-CustomDebugBreakMacro.cpp
        third-party/Catch/projects/ExtraTests/X20-BenchmarkingMacros.cpp
        third-party/Catch/projects/ExtraTests/X90-WindowsHeaderInclusion.cpp
        third-party/Catch/projects/SelfTest/CompileTimePerfTests/10.tests.cpp
        third-party/Catch/projects/SelfTest/CompileTimePerfTests/100.tests.cpp
        third-party/Catch/projects/SelfTest/CompileTimePerfTests/All.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/CmdLine.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/Details.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/GeneratorsImpl.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/InternalBenchmark.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/PartTracker.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/RandomNumberGeneration.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/String.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/StringManip.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/Tag.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/ToString.tests.cpp
        third-party/Catch/projects/SelfTest/IntrospectiveTests/Xml.tests.cpp
        third-party/Catch/projects/SelfTest/SurrogateCpps/catch_console_colour.cpp
        third-party/Catch/projects/SelfTest/SurrogateCpps/catch_debugger.cpp
        third-party/Catch/projects/SelfTest/SurrogateCpps/catch_interfaces_reporter.cpp
        third-party/Catch/projects/SelfTest/SurrogateCpps/catch_option.cpp
        third-party/Catch/projects/SelfTest/SurrogateCpps/catch_stream.cpp
        third-party/Catch/projects/SelfTest/SurrogateCpps/catch_test_case_tracker.cpp
        third-party/Catch/projects/SelfTest/SurrogateCpps/catch_test_spec.cpp
        third-party/Catch/projects/SelfTest/SurrogateCpps/catch_xmlwriter.cpp
        third-party/Catch/projects/SelfTest/TimingTests/Sleep.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Approx.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/BDD.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Benchmark.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Class.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Compilation.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Condition.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Decomposition.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/EnumToString.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Exception.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Generators.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Matchers.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Message.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Misc.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringByte.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringChrono.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringGeneral.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringOptional.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringPair.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringTuple.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringVariant.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringVector.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/ToStringWhich.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/Tricky.tests.cpp
        third-party/Catch/projects/SelfTest/UsageTests/VariadicMacros.tests.cpp
        third-party/Catch/projects/SelfTest/TestMain.cpp
        third-party/Catch/projects/XCode/OCTest/OCTest/CatchOCTestCase.h
        third-party/Catch/projects/XCode/OCTest/OCTest/CatchOCTestCase.mm
        third-party/Catch/projects/XCode/OCTest/OCTest/Main.mm
        third-party/Catch/projects/XCode/OCTest/OCTest/OCTest.mm
        third-party/Catch/projects/XCode/OCTest/OCTest/TestObj.h
        third-party/Catch/projects/XCode/OCTest/OCTest/TestObj.m
        third-party/Catch/projects/XCode/OCTest/catch_objc_impl.mm
        third-party/Catch/single_include/catch2/catch.hpp
        third-party/Catch/single_include/catch2/catch_reporter_automake.hpp
        third-party/Catch/single_include/catch2/catch_reporter_sonarqube.hpp
        third-party/Catch/single_include/catch2/catch_reporter_tap.hpp
        third-party/Catch/single_include/catch2/catch_reporter_teamcity.hpp
        third-party/Catch/src/catch_with_main.cpp
        third-party/Catch/third_party/clara.hpp)
